--- a/produk.html
+++ b/produk.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1>Kopi Nusantara</h1>
+        <h1>Kopi Nusantara terbaru</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Beranda</a></li>
